--- a/code.html
+++ b/code.html
@@ -28,11 +28,11 @@
         <p>  • To have fun</p>
         <p><big>Hopefully you learned something new here. See you next time!</big></p>
         <p><big>Related posts</big></p>
-        <p><img src="C:\Users\Admin\Downloads\HTML-Fundamentals\img\related-1.jpg" height="250px" width="250px"><big><u>How to Learn Web Development</u></big></p>
+        <p><img src="https://syedrehman.com/img/related-1.jpg" height="250px" width="250px"><big><u>How to Learn Web Development</u></big></p>
         <p><big>By Jonas Schmedtmann</big></p>
-        <p><img src="C:\Users\Admin\Downloads\HTML-Fundamentals\img\related-2.jpg" height="250px" width="250px"><big><u>The Unknown Powers of CSS</u></big></p>
+        <p><img src="https://syedrehman.com/img/related-2.jpg" height="250px" width="250px"><big><u>The Unknown Powers of CSS</u></big></p>
         <p><big>By Jim Dillon</big></p>
-        <p><img src="C:\Users\Admin\Downloads\HTML-Fundamentals\img\related-3.jpg" height="250px" width="250px"><big><u>Why JavaScript is Awesome</u></big></p>
+        <p><img src="https://syedrehman.com/img/related-3.jpg" height="250px" width="250px"><big><u>Why JavaScript is Awesome</u></big></p>
         <p><big>By Matilda</big></p>
         <p><big>Copyright 0 2027 by The Code Magazine</big></p>
     </body>
